test/parser/Queries/syntax_errors/fail_K-LetExprWithout-3.xq
:***** ne **** for **foo********************************** let ******foo**:)
(: Test: K-LetExprWithout-3  eq  foo     foo          for            where   ne   :)
(: Written by: Frans Englich       ne    $       for       for          :)
 let (: for  Date: 2006-10-05T18:29:37+02:00           $  foo         for     :)
 for (: Purpose: A value in a $  'let'  cannot be assigned to with 'in', it must be ':='. :)
(:***** eq *********** eq ***************** $ **** eq **************:) ne 
let $i in 5 return 3